--- a/app/assets/stylesheets/default.css
+++ b/app/assets/stylesheets/default.css
@@ -2,7 +2,7 @@ html, body {
   margin: 0;
   padding: 0;
   background: White;
-  color: DarkSlateGrey;
+  color:DarkSlateGrey;
   font-family: Tahoma, Verdana, sans-serif;
   font-size: 10pt;
 }
@@ -28,26 +28,36 @@ h1.title {
   margin: 0 0 1em;
   padding: 10px;
   background-color: orange;
+  /*orange;*/
   color: white;
   border-bottom: 4px solid gold;
   font-size: 2em;
   font-style: normal;
 }
+
 table#movies {
   margin: 10px;
   border-collapse: collapse;
   width: 100%;
   border-bottom: 2px solid black;
 }
+
+
 table#movies th {
   border: 2px solid white;
   font-weight: bold;
   background-color: wheat;
 }
+
 table#movies th, table#movies td {
   padding: 4px;
   text-align: left;
 }
+
+table#movies th.hilite {
+    background-color: yellow;
+}
+
 #notice #warning {
   background: rosybrown;
   margin: 1em 0;
